fixed center spacing

--- a/iswebsite/5060/5060.css
+++ b/iswebsite/5060/5060.css
@@ -48,8 +48,7 @@
 	font-family: 'Raleway', sans-serif;
 	font-size: 20px;
 	text-align: center;
-	padding-top: 15%;
-	padding-left: 21%;
+	padding-top: 3%;
 	position: absolute;
 }
 
